--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,9 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+dev = [
+    "ruff (>=0.14.10,<0.15.0)",
+    "pre-commit (>=4.5.1,<5.0.0)"
+]
